More setup tweaks, ignore generated js

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,1 +1,18 @@
-Hello!
+<!DOCTYPE html>
+<html>
+<head>
+    <title>cljs / core.async sandbox</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/page.css"/>
+</head>
+<body>
+    <header>
+        <h1>cljs / core.async sandbox</h1>
+    </header>
+        <p>Hello world</p>
+    <footer>
+        
+    </footer>
+    <script src="js/cljs.js"></script>
+</body>
+</html>
