Break out into modules

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1>cljs / core.async sandbox</h1>
     </header>
-    <article id="article-101">
+    <article id="tutorial-101">
         <h1>101</h1>
         <div id="inputs">
             <input id="query" type="text"></input>
@@ -17,11 +17,14 @@
         </div>
         <p id="results"></p>
     </article>
-    <footer>
-        
-    </footer>
+    <article id="pacman">
+        <h1>Pacman</h1>
+        <canvas></canvas>
+    </article>
+    <footer></footer>
     <script src="js/target/goog/base.js" type="text/javascript"></script>
     <script src="js/target/cljs.js" type="text/javascript"></script>
-    <script type="text/javascript">goog.require("core_async_cljs_sandbox.core")</script>
+    <script type="text/javascript">goog.require("core_async_cljs_sandbox.tutorial_101")</script>
+    <script type="text/javascript">goog.require("core_async_cljs_sandbox.pacman")</script>
 </body>
 </html>
